# dotclaude

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  conductor.json  pyproject.toml  settings.json  stats-cache.json  statusline.sh
.claude/: CLAUDE.md
.github/: CLAUDE.md  copilot-instructions.md
agents/: AGENTS-README.md  ai-sdk-agent-architect.md  chronicle-curator.md  chronicle-insights.md  devcontainer-setup.md  experiment-creator.md  github-notifications-triager.md  jrnl_builder.md  jrnlfish-builder-agent-legacy.md  jrnlfish-builder-agent.md  playwright-test-analyzer.md  project-handoff-auditor.md  research.md  verify.md  youtube-content.md
backlog/: CLAUDE.md  ROADMAP.md  chronicle-smart-suggestions-ideas.md  chronicle-stale-detection-plan.md  chronicle-thread-identity-ideas.md  native-sync-popup.md  ship-command-plan.md  video-gen-skill-plan.md
commands/: bootstrap.md  claude-webui.md  code-review.md  codex-review.md  defer.md  opensource-precheck.md  plan_retro.md  pr-review.md  project-health.md  reflect.md  reflection-log.md  retro.md  session-wrapup.md  status_line.md  update-dependencies.md
docs/: product_overview.md  session-data.md  statusline-architecture.md  user-stories.md
hooks/: generate-session-title.sh  session-end.sh  stop.sh
probes/: blocking-review-test.ts  code-review-probe.ts  review-test.ts
references/: hook-patterns.md  hooks-reference.md  permission-templates.md  project-config-checklist.md
scripts/: chronicle-dashboard.ts  chronicle-extract-lib.ts  chronicle-extract.ts  chronicle-publish.ts  (+16 more)
(+136 files in other folders)
